[project]
name = "sfmaps"
version = "0.1.0"
description = "Poster-quality map of San Francisco"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "rasterio>=1.3",
    "scipy>=1.12",
    "shapely>=2.0",
    "sodapy>=2.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "process_elevation",
    "process_neighborhoods",
    "process_streets",
    "process_terrain",
    "process_combined",
]
