[project]
name = "mapvibes"
version = "0.1.0"
description = "Poster-quality maps of San Francisco and Manhattan"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "rasterio>=1.3",
    "scipy>=1.12",
    "shapely>=2.0",
    "sodapy>=2.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["common"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",  # long lines — many matplotlib text blocks exceed line length
    "E402",  # imports after chdir — required for our entry-point pattern
    "B008",  # function calls in defaults — matplotlib patterns
]
